(env
 (dev
  (flags (:standard -w -A))))

(executables
 (names test test_orset test_orset_bst test_orset_opt_detailed test_orset_space test_orset_bst_space test_orset_opt_detailed_space)
 (ocamlopt_flags (-I %{env:FSTAR_HOME=/home/adharsh/Sources/FStar}/bin))
 (modules Peepul_Orset_opt Peepul_Orset_opt_detailed Peepul_Orset_bst Quark_Orset test test_orset test_orset_bst test_orset_opt_detailed
          test_orset_space test_orset_bst_space test_orset_opt_detailed_space)
 (libraries memtrace fstarlib core_kernel))

